# fothello

./: .gitignore  .travis.yml  README.md  index.html  params.json  xcenv.sh
Fothello/: AIStrategy.h  AIStrategy.m  AIStrategy.mm  AppDelegate.h  AppDelegate.m  BoardDisplay.h  BoardDisplay.m  BoardPiece.h  BoardPiece.m  BoardPosition.h  BoardPosition.m  BoardScene+BoardScene_Mac.h  BoardScene+BoardScene_Mac.m  BoardScene+BoardScene_iOS.h  BoardScene+BoardScene_iOS.m  BoardScene+Mac.h  BoardScene+Mac.m  BoardScene+iOS.h  BoardScene+iOS.m  BoardScene.h  BoardScene.m  CMakeCache.txt  CMakeLists.txt  DialogViewController.h  DialogViewController.m  Engine.h  EngineStrong.h  EngineStrong.mm  EngineStrongIOS.m  EngineStrongWatch.m  EngineWatch.m  EngineWeakWatch.m  Fothello-Info.plist  Fothello.h  Fothello.m  FothelloGame.h  FothelloGame.m  FothelloGameGameKit.h  FothelloGameGameKit.m  FothelloIcon.ai  (+85 more)
Fothello.xcodeproj/: project.pbxproj
Fothello/Base.lproj/: Main.storyboard  Main_iPad.storyboard  Main_iPhone.storyboard
Fothello/Images.xcassets/AppIcon.appiconset/: Contents.json
Fothello/Images.xcassets/LaunchImage.launchimage/: Contents.json
Fothello/Media.xcassets/FothelloIcon.imageset/: Contents.json
FothelloLib/: FothelloLib.h
FothelloLibTests/: BoardOpsTests.m  FothelloAITests.mm  TestBoardOps.m  UtilTests.m
FothelloLibTestsTV/: FothelloLibTestsTV.m
FothelloMac/: AppDelegate.h  AppDelegate.m  Document.h  Document.m  FothelloMac.entitlements  Info.plist  MatchViewControllerMac.h  MatchViewControllerMac.m  Storyboard.storyboard  TestBoardOps.m  main.m
(+69 files in other folders)
